# ToDo

./: .gitignore  CMakeLists.txt  README.md  a.out  entries.txt  gui.h  gui.hpp  main.cpp  sort.cpp  table.h  table.hpp  todo.h  todo.hpp
.cache/clangd/index/: gui.cpp.6D8A2B9036FD5580.idx  gui.hpp.4DCA05D4996BDE8C.idx  main.cpp.933AED16B7642667.idx  table.cpp.E2F13844A51033F9.idx  table.hpp.4B64DC6C5062B52A.idx  todo.cpp.FC468AA630C24337.idx  todo.hpp.D23A80A2B92CAC16.idx
include/: gui.hpp  table.hpp  todo.hpp
src/: gui.cpp  main.cpp  table.cpp  todo.cpp
